# VLM-CLIP

./: .gitignore  README.md  config.py  constants.py  dataset.py  evaluation.py  example.py  lsp.lua  main.py  main.py.bak  model.py  model_t.py  model_v.py  process_video.py  pyproject.toml  text_description.py  train.py  trainer.py  trung.py  utest.py  utils.py
.github/instructions/: Finetuning CLIP model with LLM  and adapter.instructions.md
adapter/: __init__.py  clip_adapter.py  peclip.py  shared.py
dataset/: __init__.py  emotic.py  enhance.py  mat2py.py
test_checkpoints/: test_adapter.pt
