[project]
name = "resfes25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.3",
    "timm>=1.0.15",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.10",
]
