[project]
name = "resfes25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "qwen-vl-utils>=0.0.11",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.10",
]
